[gd_scene load_steps=4 format=2]

[ext_resource path="res://hsz/ui/item_column/item_column.png" type="Texture" id=1]
[ext_resource path="res://hsz/ui/item_slot/item_slot.tscn" type="PackedScene" id=2]
[ext_resource path="res://hsz/ui/item_column/item_column.gd" type="Script" id=3]

[node name="ItemColumn" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.95
anchor_right = 0.5
anchor_bottom = 0.95
margin_left = -201.0
margin_top = -50.0
margin_right = 201.0
rect_min_size = Vector2( 402, 50 )
mouse_filter = 1
texture = ExtResource( 1 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -20.0
margin_right = 200.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Slot1" parent="NinePatchRect/HBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 0.0
margin_right = 44.0
margin_bottom = 40.0
mouse_filter = 1

[node name="Slot2" parent="NinePatchRect/HBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_top = 0.0
margin_right = 88.0
margin_bottom = 40.0
mouse_filter = 1

[node name="Slot3" parent="NinePatchRect/HBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 92.0
margin_top = 0.0
margin_right = 132.0
margin_bottom = 40.0
mouse_filter = 1

[node name="Slot4" parent="NinePatchRect/HBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 136.0
margin_top = 0.0
margin_right = 176.0
margin_bottom = 40.0
mouse_filter = 1

[node name="Slot5" parent="NinePatchRect/HBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 180.0
margin_top = 0.0
margin_right = 220.0
margin_bottom = 40.0
mouse_filter = 1

[node name="Slot6" parent="NinePatchRect/HBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 224.0
margin_top = 0.0
margin_right = 264.0
margin_bottom = 40.0
mouse_filter = 1

[node name="Slot7" parent="NinePatchRect/HBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 268.0
margin_top = 0.0
margin_right = 308.0
margin_bottom = 40.0
mouse_filter = 1

[node name="Slot8" parent="NinePatchRect/HBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 312.0
margin_top = 0.0
margin_right = 352.0
margin_bottom = 40.0
mouse_filter = 1

[node name="Slot9" parent="NinePatchRect/HBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 356.0
margin_top = 0.0
margin_right = 396.0
margin_bottom = 40.0
mouse_filter = 1
